<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">My NanoDegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotifystreamer">SPOTIFY STREAMER</string>
    <string name="scoresapp">SCORES APP</string>
    <string name="libraryapp">LIBRARY APP</string>
    <string name="builditbigger">BUILD IT BIGGER</string>
    <string name="xyzstreamer">XYZ STREAMER</string>
    <string name="capstone">CAPSTONE: MY APP</string>
</resources>
